# reflecto_backend

./: main.py  pyproject.toml
data/models/251126_6out/: config.json  stats.pt
notebooks/: inference_test.ipynb
src/reflecto_ai_backend/: config.py  inference.py  xrr_model.py
src/reflecto_ai_backend/core/: dataset.py  inference_pipeline.py  main.py  simulate.py  train.py
src/reflecto_backend/: __init__.py  api.py
src/reflecto_backend/core/: config.py  evaluate.py  fitting_engine.py  inference.py
